--- a/HTML/competitionsDetails.html
+++ b/HTML/competitionsDetails.html
@@ -150,9 +150,11 @@
                     </button></div>
             </div>
 
-            <div class="col-4" align="center"><img id="fotinha" class="img-fluid rounded" data-bind="attr: {src:Photo}"
-                    style="max-height:565px">
+            <div class="col-4" align="center">
+                <a data-bind="attr: {href: Photo}"><img id="fotinha" class="img-fluid rounded"
+                        data-bind="attr: {src:Photo}" style="max-height:565px"></a>
             </div>
+
         </div>
 
 
