--- a/HTML/gameDetails.html
+++ b/HTML/gameDetails.html
@@ -48,50 +48,264 @@
     </nav>
     <!-- Work Area-->
     <div class="container">
-        <div class="py-2 border-bottom mb-3">
-            <h2 data-bind="text:Name() +' [' + Id() + ']'"></h2>
+
+        <div class="py-2 border-bottom mb-3 row">
+            <div class="col">
+                <h2 data-bind="text:Title"></h2>
+            </div>
+            <div class="col pt-2" align="right"><a href="./athletes.html" class="btn btn-default btn-sm small"><i
+                        class="fa fa-list"></i>
+                    Back to List</a>
+            </div>
+
         </div>
-        <!-- ko if:Name().length > 0 -->
-        <div class="row border-bottom mx-0 my-1">
-            <div class="col-2">Game Id</div>
-            <div class="col-10" data-bind="text: Id"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Name</div>
-            <div class="col-10" data-bind="text: Name"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Country Name</div>
-            <div class="col-10" data-bind="text: CountryName"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Season</div>
-            <div class="col-10" data-bind="text: Season"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1">
-            <div class="col-2">Year</div>
-            <div class="col-10" data-bind="text: Year"></div>
-        </div>
-        <div class="row border-bottom mx-0  my-1" data-bind="visible: Logo() != '' && Logo() != null">
-            <div class="col-2">Logo</div>
-            <div class="small col-10">
-                <img class="img-thumbnail" data-bind="attr:{src: Logo}"><br /><i class="fa fa-link"></i><br />
-                [<a class="link-dark text-decoration-none" data-bind="attr: { href: Logo }, text: Logo"
-                    target="_blank"></a>]
+        <div class="row">
+
+
+            <div class="col-8">
+
+                <div class="row border-bottom mx-0 my-1">
+                    <div class="col-2">Game Id</div>
+                    <div class="col-10" data-bind="text: Id"></div>
+                </div>
+                <div class="row border-bottom mx-0  my-1">
+                    <div class="col-2">Name</div>
+                    <div class="col-10" data-bind="text: Name"></div>
+                </div>
+                <div class="row border-bottom mx-0  my-1">
+                    <div class="col-2">Country Name</div>
+                    <div class="col-10" data-bind="text: CountryName"></div>
+                </div>
+                <div class="row border-bottom mx-0  my-1">
+                    <div class="col-2">Season</div>
+                    <div class="col-10" data-bind="text: Season"></div>
+                </div>
+                <div class="row border-bottom mx-0  my-1">
+                    <div class="col-2">Year</div>
+                    <div class="col-10" data-bind="text: Year"></div>
+                </div>
+                <div class="row mx-0  my-1">
+                    <div class="col-6 border-bottom">Photo</div>
+                    <div class="col-6 border-bottom">Location</div>
+                </div>
+                <div class="row border-bottom">
+                    <div class="col-6"><img class="img-thumbnail" data-bind="attr:{src: Photo}" />
+
+                    </div>
+                    <div class="col-6"> <iframe style="width:100%; height: 400px;" class="myFrame"
+                            data-bind="attr:{src:'https://www.google.com/maps/embed/v1/place?key=AIzaSyAJLUALI140YZxYaSh3TN8hedXJEsm+1Bkg&q=' + CountryName() + City()}"></iframe>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+            <div class="col-4">
+                <div class="row mx-0  my-1" data-bind="visible: Logo() != '' && Logo() != null">
+                    <div class="col-2"></div>
+                    <div class="small col-10">
+                        <img class="img-thumbnail" data-bind="attr:{src: Logo}">
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row border-bottom mx-0  my-1" data-bind="visible: Photo() != '' && Photo() != null">
-            <div class="col-2">Photo</div>
-            <div class="small col-10">
-                <img class="img-thumbnail" data-bind="attr:{src: Photo}"><br />
-                <i class="fa fa-link"></i> [<a class="link-dark text-decoration-none"
-                    data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>]
+
+        <div class="accordion pt-2" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Athletes
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Best Medal</th>
+                                    <th scope="col">Sex</th>
+
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach: Athletes">
+                                <tr>
+                                    <td class="align-middle" data-bind="text:Id"></td>
+                                    <td class="align-middle"><a href="" class="nome"
+                                            style="text-decoration:none; color:black"
+                                            data-bind="text: Name, attr: {href:'./athletesDetails.html?id=' + Id }"></a>
+                                    </td>
+                                    <td class="align-middle" data-bind="html: $root.formatPosition(BestPosition)"></td>
+                                    <td class="align-middle" data-bind="html: $root.formatSex(Sex)"></td>
+                                    <td class="text-end">
+                                        <a class="btn btn-default btn-light btn-xs"
+                                            data-bind="attr: { href:'./athletesDetails.html?id=' + Id }">
+                                            <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Modalities
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Photo</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach:Modalities">
+                                <tr>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Id"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p><a style="text-decoration:none; color:black"
+                                                data-bind="text: Name, attr: {href:'./modalitiesDetails.html?id=' + Id}"></a>
+                                        </p>
+                                    </td>
+                                    <td class="img">
+                                        <a href="" data-bind="attr:{href:'./ModalitiesDetails.html?id=' + Id}"> <img
+                                                style="height:40px" data-bind="attr:{src: Photo}"></img></a>
+                                    </td>
+
+                                    <td class="text-end">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Competitions
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">Name</th>
+                                    <th style="padding-left: 30px" scope="col" class="">Photo</th>
+                                    <th style="padding-left: 0px" scope="col">Modality</th>
+                                    <th scope="col">Results</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach: Competitions">
+                                <tr>
+                                    <td class="align-middle" data-bind="text:Id"></td>
+                                    <td class="align-middle"><a href="" class="nome"
+                                            style="text-decoration:none; color:black"
+                                            data-bind="text: Name, attr: {href:'./competitionsDetails.html?id=' + Id }"></a>
+                                    </td>
+                                    <td>
+                                        <a
+                                            data-bind="html: $root.formatImage(Photo),attr: {href: './competitionsDetails.html?id=' + Id }"></a>
+
+                                    </td>
+                                    <td class="align-middle"> <a href="" style="text-decoration:none; color:black"
+                                            data-bind="text: Modality, attr: {href:'./ModalitiesDetails.html?id=' + Id }"></a>
+                                    </td>
+                                    <td class="align-middle" data-bind="text:Results"></td>
+                                    <td class="text-end"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item" id="medals">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Medals
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <table class="table table-striped table-sm small">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <th scope="col">Placement</th>
+                                    <th scope="col">Medal</th>
+                                    <th scope="col">Number Of Medals</th>
+                                    <th scope="col" class="text-right"></th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach:Medals">
+                                <tr>
+                                    <td class="align-middle">
+                                        <p data-bind="html: $root.formatMedal(MedalId)"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: MedalName"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p data-bind="text: Counter"></p>
+                                    </td>
+                                    <td class="text-end">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- /ko -->
-        <a href="./games.html" class="btn btn-default btn-sm small"><i class="fa fa-list"></i> Back to List</a>
-        <a data-bind="attr: { href:'./gameFull.html?id=' + Id() }" class="btn btn-default btn-sm small"><i
-                class="fa fa-th"></i> Full Setails</a>
+
     </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -113,7 +327,8 @@
         <div class="container small">
             <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
             <div class="navbar-nav">
-                <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a>
+                <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de
+                        Aveiro</a>
                 </div>
             </div>
         </div>
