--- a/HTML/favorites.html
+++ b/HTML/favorites.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+    <div class="container">
+        <h2 style="margin-top:80px">Favourites <i class="fa fa-heart-o" aria-hidden="true"></i></h2>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" tabindex="Olympics"><img
@@ -41,7 +44,7 @@
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="favorites.html"><i
                                 class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
                                 class="fa fa-address-book-o text-danger"></i> About us</a></li>
@@ -52,6 +55,101 @@
         </div>
     </nav>
     <!-- Working Area -->
+
+
+
+    <div class="container" style="margin-top: 0px;">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane"
+                    type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Athletes</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
+                    type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Profile</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane"
+                    type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Contact</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane"
+                    type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false"
+                    disabled>Disabled</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
+                tabindex="0">
+                <div style="margin-top:30px">
+                    <table class="table table-striped table-sm small">
+                        <thead class="bg-dark text-light">
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Nome</th>
+                                <th scope="col">Nacionalidade</th>
+                                <th scope="col" class="text-right"></th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-favourites">
+                            <tr>
+                                <td class="align-middle" data-bind="text:Id"></td>
+                                <td class="align-middle" data-bind="text:Name"></td>
+                                <td class="align-middle" data-bind="text:Nationality"></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+
+            </div>
+            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                ...</div>
+            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                ...</div>
+            <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab"
+                tabindex="0">...</div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="container" style="margin-top: 100px;">
         <h3 class="border-bottom py-2 mb-2">Athletes</h3>
         <table class="table table-striped table-sm small">
