--- a/HTML/modalities.html
+++ b/HTML/modalities.html
@@ -34,9 +34,9 @@
                                 class="fa fa-trophy"></i> Competitions</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i
                                 class=" fa fa-flag-o text-danger"></i> Countries</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="games.html"><i
+                    <li class="nav-item"><a class="nav-link " aria-current="page" href="games.html"><i
                                 class="fa fa-map-marker text-success"></i> Games</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="modalities.html"><i
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-4">
                 <form class="form-inline py-2 my-lg-0 ">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search and Select Someone"
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search and Select a Modality"
                         spellcheck="false" id="tagsModalities" aria-label="Search">
                 </form>
             </div>
