--- a/HTML/favorites.html
+++ b/HTML/favorites.html
@@ -66,17 +66,38 @@
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
-                    type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Profile</button>
+                    type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Countries</button>
             </li>
+
+
+
+
+
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane"
-                    type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Contact</button>
+                    type="button" role="tab" aria-controls="contact-tab-pane"
+                    aria-selected="false">Competitions</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane"
-                    type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false"
-                    disabled>Disabled</button>
+                <button class="nav-link" id="games-tab" data-bs-toggle="tab" data-bs-target="#games-tab-pane"
+                    type="button" role="tab" aria-controls="games-tab-pane" aria-selected="false">Games</button>
             </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="modalities-tab" data-bs-toggle="tab" data-bs-target="#modalities-tab-pane"
+                    type="button" role="tab" aria-controls="modalities-tab-pane"
+                    aria-selected="false">Modalities</button>
+            </li>
+
+
+
+
+
+
+
+
+
+
+
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
@@ -86,8 +107,8 @@
                         <thead class="bg-dark text-light">
                             <tr>
                                 <th scope="col">Id</th>
-                                <th scope="col">Nome</th>
-                                <th scope="col">Nacionalidade</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Sex</th>
                                 <th scope="col" class="text-right"></th>
                             </tr>
                         </thead>
@@ -105,11 +126,109 @@
 
             </div>
             <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-                ...</div>
+                <div style="margin-top: 30px;">
+                    <table class="table table-striped table-sm small">
+                        <thead class="bg-dark text-light">
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">IOC</th>
+                                <th scope="col" class="text-right"></th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-favourites2">
+                            <tr>
+                                <td class="align-middle" data-bind="text:Id"></td>
+                                <td class="align-middle" data-bind="text:Name"></td>
+                                <td class="align-middle" data-bind="text:IOC"></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
             <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-                ...</div>
-            <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab"
-                tabindex="0">...</div>
+                <div style="margin-top: 30px;">
+                    <table class="table table-striped table-sm small">
+                        <thead class="bg-dark text-light">
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Modality</th>
+                                <th scope="col" class="text-right"></th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-favourites3">
+                            <tr>
+                                <td class="align-middle" data-bind="text:Id"></td>
+                                <td class="align-middle" data-bind="text:Name"></td>
+                                <td class="align-middle" data-bind="text:Modality"></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="tab-pane fade" id="games-tab-pane" role="tabpanel" aria-labelledby="games-tab" tabindex="0">
+                <div style="margin-top: 30px;">
+                    <table class="table table-striped table-sm small">
+                        <thead class="bg-dark text-light">
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Year</th>
+                                <th scope="col">City </th>
+                                <th scope="col">Country </th>
+                                <th scope="col" class="text-right"></th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-favourites4">
+                            <tr>
+                                <td class="align-middle" data-bind="text:Id"></td>
+                                <td class="align-middle" data-bind="text:Name"></td>
+                                <td class="align-middle" data-bind="text:Year"></td>
+                                <td class="align-middle" data-bind="text:City"></td>
+                                <td class="align-middle" data-bind="text:CountryName"></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="tab-pane fade" id="modalities-tab-pane" role="tabpanel" aria-labelledby="modalities-tab"
+                tabindex="0">
+
+                <div style="margin-top: 30px;">
+                    <table id="quatro" class="table table-striped table-sm small">
+                        <thead class="bg-dark text-light">
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Nome</th>
+                                <th scope="col" class="text-right"></th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-favourites5">
+                            <tr>
+                                <td class="align-middle" data-bind="text:Id"></td>
+                                <td class="align-middle" data-bind="text:Name"></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
         </div>
     </div>
 
@@ -119,144 +238,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="container" style="margin-top: 100px;">
-        <h3 class="border-bottom py-2 mb-2">Athletes</h3>
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Nacionalidade</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody id="table-favourites">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Nationality"></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container" style="margin-top: 100px;">
-        <h3 class="border-bottom py-2 mb-2">Countries</h3>
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">IOC</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody id="table-favourites2">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:IOC"></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container" style="margin-top: 100px;">
-        <h3 class="border-bottom py-2 mb-2">Competitions</h3>
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Modality</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody id="table-favourites3">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Modality"></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container" style="margin-top: 100px;">
-        <h3 class="border-bottom py-2 mb-2">Games</h3>
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Year</th>
-                    <th scope="col">City Name</th>
-                    <th scope="col">Country Name</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody id="table-favourites4">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Year"></td>
-                    <td class="align-middle" data-bind="text:City"></td>
-                    <td class="align-middle" data-bind="text:CountryName"></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container" style="margin-top: 100px;">
-        <h3 class="border-bottom py-2 mb-2">Modalities</h3>
-        <table id="quatro" class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody id="table-favourites5">
-                <tr>
-                    <td class="align-middle" data-bind="text:Id"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
     <!-- End of Working Area -->
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container small">
