--- a/HTML/games.html
+++ b/HTML/games.html
@@ -49,6 +49,10 @@
         </div>
     </nav>
     <!-- Working Area -->
+
+
+
+
     <div class="container">
         <div class="d-flex flex-row">
             <div class="py-2 me-auto mb-1 col-6">
@@ -68,7 +72,28 @@
                 <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
                 <span data-bind="html: 'Games: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
             </p>
-            <div class="col-8 my-0 pt-3">
+
+            <div class="col-4 my-0 pt-3">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split"
+                        data-bs-toggle="dropdown" aria-expanded="false">Filter</button>
+                    <button type="button" id="divshow" class="d-none btn btn-danger"><i class="fa fa-warning"
+                            aria-hidden="true"></i>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a id="summer" data-bind="attr:{href:'./games.html?season=1'}"
+                                class="dropdown-item">Summer</a></li>
+                        <li><a id="winter" data-bind="attr:{href:'./games.html?season=2'}"
+                                class="dropdown-item">Winter</a></li>
+                    </ul>
+                </div>
+            </div>
+
+
+
+
+
+            <div class="col-4 my-0 pt-3">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
                     <li class="page-item float-end"><a class="page-link" title="First Page"
