--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
     <link href="/lib/font-awesome/dist/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="..\Styles\myCSS.css" />
     <link rel="stylesheet" href="\lib\jquery-ui\dist\themes\base\jquery-ui.css">
-
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/38/38153.png">
     <style>
         .carousel {
             width: 100%;
