filtros atletas e games

--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -61,6 +61,7 @@
         </div>
     </nav>
     <!-- Working Area -->
+
     <div class="container">
         <div class="d-flex flex-row">
             <div class="py-2 me-auto mb-1 col-6">
@@ -80,41 +81,109 @@
         <div class="row small">
             <p class=" col-4 mr-auto pt-2">
                 <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-                <span data-bind="html: 'Games: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
+                <span data-bind="html: 'athletes: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
             </p>
-
             <div class="col-8 my-0 pt-3">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
-                    <li class="page-item float-end"><a class="page-link" title="First Page"
-                            data-bind="attr: { href: './athletes.html?page=' + '1',  rel:'prev'}">⇤</a></li>
-                    <li class="page-item float-end"><a class="page-link" title="Previous Page"
-                            data-bind="attr: { href: './athletes.html?page=' + previousPage(),  rel:'prev'}">←</a></li>
+                    <li class="page-item float-end">
+                        <!-- ko ifnot: sortby -->
+                        <a class="page-link" title="First Page"
+                            data-bind="attr: { href: './athletes.html?page=' + '1',  rel:'prev'}">⇤</a>
+                        <!-- /ko -->
+                        <!-- ko if: sortby -->
+                        <a ckass="page-link" title="First Page"
+                            data-bind="attr: { href: './athletes.html?sortby=' + sortby() + '&page=' + '1',  rel:'prev'}">⇤</a>
+                        <!-- /ko -->
+                    </li>
+
+
+                    <li class="page-item float-end">
+                        <!-- ko ifnot: sortby -->
+                        <a class="page-link" title="Previous Page"
+                            data-bind="attr: { href: './athletes.html?page=' + previousPage(),  rel:'prev'}">←</a>
+                        <!-- /ko -->
+                        <!-- ko if: sortby -->
+                        <a class="page-link" title="Previous Page"
+                            data-bind="attr: { href: './athletes.html?sortby=' + sortby() + '&page=' + previousPage(),  rel:'prev'}">←</a>
+                        <!-- /ko -->
+                    </li>
                     <!-- /ko -->
                     <!-- ko foreach: pageArray()-->
                     <!-- ko if:$data == $parent.currentPage() -->
-                    <li class="active page-item"><a class="page-link"
-                            data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a></li>
+                    <li class="active page-item">
+                        <a class="page-link" data-bind="attr: { title:'Current Page ' + $data }, text: $data"></a>
+                    </li>
                     <!-- /ko -->
+
                     <!-- ko if:$data != $parent.currentPage() -->
-                    <li class="page-item"><a class="page-link"
+                    <li class="page-item">
+                        <!-- ko ifnot: $parent.sortby() -->
+                        <a class="page-link"
                             data-bind="attr: { href: './athletes.html?page=' + $data, title:'Goto Page ' + $data }, text:$data"></a>
+                        <!-- /ko -->
+                        <!-- ko if: $parent.sortby() -->
+                        <a class="page-link"
+                            data-bind="attr: { href: './athletes.html?sortby=' + $parent.sortby() + '&page=' + $data, title:'Goto Page ' + $data }, text:$data"></a>
+                        <!-- /ko -->
                     </li>
                     <!-- /ko -->
                     <!-- /ko -->
 
-
                     <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
-                    <li class="page-item"><a class="page-link" title="Next Page"
-                            data-bind="attr: { href: './athletes.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                    <li class="page-item"><a class="page-link" title="Last Page"
-                            data-bind="attr: { href: './athletes.html?page=' + totalPages() }">⇥</a></li>
+                    <li class="page-item">
+                        <!-- ko ifnot: sortby -->
+                        <a class="page-link" title="Next Page"
+                            data-bind="attr: { href: './athletes.html?page=' + nextPage(), rel:'next' }">→</a>
+                        <!-- /ko -->
+                        <!-- ko if: sortby -->
+                        <a class="page-link" title="Next Page"
+                            data-bind="attr: { href: './athletes.html?sortby=' + sortby() + '&page=' + nextPage(), rel:'next' }">→</a>
+                        <!-- /ko -->
+                    </li>
+                    <li class="page-item">
+                        <!-- ko ifnot: sortby -->
+                        <a class="page-link" title="Last Page"
+                            data-bind="attr: { href: './athletes.html?page=' + totalPages() }">⇥</a>
+                        <!-- /ko -->
+                        <!-- ko if: sortby -->
+                        <a class="page-link" title="Last Page"
+                            data-bind="attr: { href: './athletes.html?sortby=' + sortby() + '&page=' + totalPages() }">⇥</a>
+                        <!-- /ko -->
+                    </li>
                     <!-- /ko -->
                 </ul>
             </div>
         </div>
         <!-- /ko -->
+        <div class="dropdown">
+            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Filters
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a id="sortId" data-bind="attr:{href:'./athletes.html?sortby=Id'}" class="dropdown-item">Id</a></li>
+                <li><a id="sortNameUp" data-bind="attr:{href:'./athletes.html?sortby=NameUp'}"
+                        class="dropdown-item">Name Up</a></li>
+                <li><a id="sortNameDn" data-bind="attr:{href:'./athletes.html?sortby=NameDn'}"
+                        class="dropdown-item">Name Down</a></li>
+                <li><a id="sortHeightUp" data-bind="attr:{href:'./athletes.html?sortby=HeightUp'}"
+                        class="dropdown-item">Height Up</a></li>
+                <li><a id="sortHeightDn" data-bind="attr:{href:'./athletes.html?sortby=HeightDn'}"
+                        class="dropdown-item">Height Down</a></li>
+                <li><a id="sortSexUp" data-bind="attr:{href:'./athletes.html?sortby=SexUp'}" class="dropdown-item">Sex
+                        Up</a></li>
+                <li><a id="sortSexDn" data-bind="attr:{href:'./athletes.html?sortby=SexDn'}" class="dropdown-item">Sex
+                        Down</a></li>
+            </ul>
 
+        </div>
+        <div class="d-none pt-0 ps-0" id="divshow"><a href="athletes.html" style="text-decoration:none"><span
+                    id="remover" style="color:red"><i class="fa fa-times" aria-hidden="true"></i> Remove
+                    Filter</span></a>
+        </div>
+
+        <br>
         <table class="table table-striped table-sm small">
             <thead class="bg-dark text-light">
                 <tr>
