ta quase caralho

--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -175,6 +175,14 @@
                         Up</a></li>
                 <li><a id="sortSexDn" data-bind="attr:{href:'./athletes.html?sortby=SexDn'}" class="dropdown-item">Sex
                         Down</a></li>
+                <li><a id="sortBornDateUp" data-bind="attr:{href:'./athletes.html?sortby=BornDateUp'}"
+                        class="dropdown-item">Born Date Up</a></li>
+                <li><a id="sortBornDateDn" data-bind="attr:{href:'./athletes.html?sortby=BornDateDn'}"
+                        class="dropdown-item">Born Date Down</a></li>
+                <li><a id="sortDiedDateUp" data-bind="attr:{href:'./athletes.html?sortby=DiedDateUp'}"
+                        class="dropdown-item">Died Date Up</a></li>
+                <li><a id="sortDiedDateDn" data-bind="attr:{href:'./athletes.html?sortby=DiedDateDn'}"
+                        class="dropdown-item">Died Date Down</a></li>
             </ul>
 
         </div>
@@ -227,7 +235,8 @@
                     </h5>
                 </div>
                 <div class="modal-body text-center">
-                    <i class="fa fa-spin fa-3x fa-refresh"></i>
+                    <img style="width:150px" src="https://i.gifer.com/origin/f2/f260f2bad4a3f8741a4392cf28c3e60c.gif"
+                        alt="">
                 </div>
             </div>
         </div>
