--- a/HTML/competitionsDetails.html
+++ b/HTML/competitionsDetails.html
@@ -127,7 +127,7 @@
 
 
                 <!-- Modal -->
-                <div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
+                <div class="modal fade" id="modalId1" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
                     aria-hidden="true">
                     <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
@@ -193,7 +193,7 @@
                 </script>
 
                 <div><button type="button" class="btn btn-danger btn-lg ms-3 mt-2" data-bs-toggle="modal"
-                        data-bs-target="#modalId">
+                        data-bs-target="#modalId1">
                         Participants
                     </button></div>
             </div>
