--- a/HTML/modalities.html
+++ b/HTML/modalities.html
@@ -136,7 +136,9 @@
                     </h5>
                 </div>
                 <div class="modal-body text-center">
-                    <i class="fa fa-spin fa-3x fa-refresh"></i>
+                    <img style="width:150px" src="https://i.gifer.com/origin/f2/f260f2bad4a3f8741a4392cf28c3e60c.gif"
+                        alt="">
+
                 </div>
             </div>
         </div>
