--- a/HTML/modalitiesDetails.html
+++ b/HTML/modalitiesDetails.html
@@ -73,7 +73,7 @@
                     <div class="col-10" data-bind="text: Name"></div>
                 </div>
             </div>
-            <div class="col-4" align="center"><a data-bind="attr: {href: Photo}"><img id="fotinha"
+            <div class="col-4" align="center"><a data-bind="attr: {href: Photo}"><img data-bind="attr: {src: Photo}"
                         class="img-fluid rounded" alt="..." style="max-height:565px">
                 </a></div>
             <div class="col-8">
