--- a/HTML/competitionsDetails.html
+++ b/HTML/competitionsDetails.html
@@ -38,12 +38,13 @@
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
-                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
-                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
+                <div class="pe-3"><a class="nav-link" aria-current="page" href="favorites.html"><i
+                            class="fa fa-heart-o text-danger"></i> Favourites</a></div>
+                <div class="Toggler" id="toggler" style="cursor:pointer"> <i class="fa fa-sun-o fa-2x"
+                        aria-hidden="true"></i> </div>
             </div>
+        </div>
         </div>
     </nav>
     <!-- Work Area-->
@@ -258,6 +259,7 @@
         <script src="https://code.jquery.com/jquery-3.6.1.min.js"
             integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
         <script src="..\Scripts\competitionsDetails.js"></script>
+        <script src="..\Scripts\myScript.js"></script>
 </body>
 
 </html>
