--- a/HTML/favorites.html
+++ b/HTML/favorites.html
@@ -242,9 +242,15 @@
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
+            <div><a style="text-decoration:none;color:black" href="aboutus.html" class="nome">
+                    <b> <i class="fa fa-address-book" aria-hidden="true"></i> About Us</b></a>
+            </div>
+
+
             <div><a style="text-decoration:none;color:black" href="" class="nome" data-bs-toggle="modal"
                     data-bs-target="#modalId">
-                    <b> <i class="fa fa-newspaper-o" aria-hidden="true"></i> Subscribe to our Newsletter</b></a></div>
+                    <b> <i class="fa fa-newspaper-o" aria-hidden="true"></i> Subscribe to our Newsletter</b></a>
+            </div>
             <div class="navbar-nav">
                 <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a>
                 </div>
@@ -305,8 +311,8 @@
     <script src="../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../lib/knockout/dist/knockout-latest.min.js"></script>
     <script src="../lib/jquery/dist/jquery.min.js"></script>
+    <script src="..\Scripts\myScript.js"></script>
     <script src="..\Scripts\favorites.js"></script>
-    <script src="..\Scripts\myScripts.js"></script>
 </body>
 
 </html>
