--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -46,6 +46,8 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="aboutus.html"><i
                                 class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
+                <div class="Toggler" id="toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
+
             </div>
         </div>
     </nav>
@@ -180,6 +182,11 @@
         <nav class="navbar navbar-light bg-light fixed-bottom">
             <div class="container small">
                 <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
+                <div><a style="text-decoration:none;color:black" href="aboutus.html" class="nome">
+                        <b> <i class="fa fa-address-book" aria-hidden="true"></i> About Us</b></a>
+                </div>
+
+
                 <div><a style="text-decoration:none;color:black" href="" class="nome" data-bs-toggle="modal"
                         data-bs-target="#modalId">
                         <b> <i class="fa fa-newspaper-o" aria-hidden="true"></i> Subscribe to our Newsletter</b></a>
@@ -195,5 +202,6 @@
         <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="/lib/knockout/dist/knockout-latest.min.js"></script>
         <script src="/lib/jquery/dist/jquery.min.js"></script>
+        <script src="../Scripts/myScript.js"></script>
 
 </body>
