--- a/HTML/athletesDetails.html
+++ b/HTML/athletesDetails.html
@@ -39,14 +39,13 @@
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
-                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
-                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
                 </ul>
-                <div class="Toggler" id="toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
-
+                <div class="pe-3"><a class="nav-link" aria-current="page" href="favorites.html"><i
+                            class="fa fa-heart-o text-danger"></i> Favourites</a></div>
+                <div class="Toggler" id="toggler" style="cursor:pointer"> <i class="fa fa-sun-o fa-2x"
+                        aria-hidden="true"></i> </div>
             </div>
+        </div>
         </div>
     </nav>
     <!-- Work Area-->
@@ -165,8 +164,8 @@
                 <div> <a data-bind="attr: { href:'./athletesFull.html?id=' + Id() }"
                         class="btn btn-default btn-sm small"><i class="fa fa-th"></i> Full Athlete Details</a></div>
             </div>
-            <div class="col-4" align="center"><a data-bind="attr: {href: Photo}"><img id="fotinha"
-                        class="img-fluid rounded" alt="..." style="max-height:565px">
+            <div class="col-4" align="center"><a data-bind="attr: {href: Photo}"><img data-bind="attr: {src: Photo}"
+                        id="fotinha" class="img-fluid rounded" alt="..." style="max-height:565px">
                 </a></div>
         </div>
 
@@ -203,9 +202,15 @@
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <div class="container small">
             <div class="navbar-text">&copy; Introdução as Tecnologias Web - 2022/23</div>
+            <div><a style="text-decoration:none;color:black" href="aboutus.html" class="nome">
+                    <b> <i class="fa fa-address-book" aria-hidden="true"></i> About Us</b></a>
+            </div>
+
+
             <div><a style="text-decoration:none;color:black" href="" class="nome" data-bs-toggle="modal"
                     data-bs-target="#modalId">
-                    <b> <i class="fa fa-newspaper-o" aria-hidden="true"></i> Subscribe to our Newsletter</b></a></div>
+                    <b> <i class="fa fa-newspaper-o" aria-hidden="true"></i> Subscribe to our Newsletter</b></a>
+            </div>
             <div class="navbar-nav">
                 <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a>
                 </div>
